--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,15 @@
+# CodeIgniter 3 Folders
+/system/
+/user_guide/
+/application/cache/*
+/application/logs/*
+
+# Sensitive Configs (Keep your DB passwords off GitHub!)
+/application/config/database.php
+/application/config/development/
+
+# Termux & Database Temp Files
+*.sock
+*.lock
+*.sql
 .DS_Store
-
-application/cache/*
-!application/cache/index.html
-
-application/logs/*
-!application/logs/index.html
-
-!application/*/.htaccess
-
-composer.lock
-tests/mocks/database/ci_test.sqlite
-
-user_guide_src/build/*
-user_guide_src/cilexer/build/*
-user_guide_src/cilexer/dist/*
-user_guide_src/cilexer/pycilexer.egg-info/*
-/vendor/
-
-# IDE Files
-#-------------------------
-/nbproject/
-.idea/*
-
-## Sublime Text cache files
-*.tmlanguage.cache
-*.tmPreferences.cache
-*.stTheme.cache
-*.sublime-workspace
-*.sublime-project
-/tests/tests/
-/tests/results/
